--- a/shop/src/main/webapp/css/style.css
+++ b/shop/src/main/webapp/css/style.css
@@ -1,19 +1,27 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Orbit&display=swap');
 
-* {
-	font-family: 'Orbit', sans-serif;
+@font-face {
+  font-family: 'GmarketSansMedium';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
-@media screen and (max-width: 960px) {
+* {
+  font-family: 'GmarketSansMedium';
+}
+
+
+@media screen and (max-width: 720px) {
    #img_header { 
 	   display: none; 
    }
 }
 
 .ellipsis {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;	
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
-
